--- a/TextileResearchDevelopment/Views/Fabric/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Fabric/Index.cshtml
@@ -1451,7 +1451,7 @@
             $("#FP").val("");
             $('#FP').multiselect('refresh');
 
-            if (rowdata.ua.Fabric == 1) {
+            if (rowdata.ua.Knit == 1) {
                 $("#FP").multiselect('select', 1);
             }
             if (rowdata.ua.CW == 1) {
