--- a/TextileResearchDevelopment/Views/Peach/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Peach/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <head>
-    <script type="text/javascript" src="~/Scripts/bootstrap.js"></script>
+    <script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/Scripts/bootstrap3-typeahead.min.js"></script>
     <style>
         tfoot input {
