--- a/TextileResearchDevelopment/Views/HSP/Index.cshtml
+++ b/TextileResearchDevelopment/Views/HSP/Index.cshtml
@@ -8,8 +8,6 @@
 <head>
     <script type="text/javascript" src="~/Scripts/bootstrap.js"></script>
     <script type="text/javascript" src="~/Scripts/bootstrap3-typeahead.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/bootstrap-multiselect.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap-multiselect.css">
     <style>
         tfoot input {
             width: 100%;
@@ -477,13 +475,8 @@
             dom: 'Bfrtip',
             buttons: [
                 {
-                    extend: 'excelHtml5',
-                    exportOptions: {
-                        columns: ':visible'
-                    }
-                },
-
-                'colvis'
+                    extend: 'excelHtml5'
+                }
             ],
             "ajax":
             {
@@ -604,17 +597,6 @@
             });
         });
 
-        $('#fabricSelectionTable tbody').on('click', 'tr', function () {
-            event.preventDefault();
-            if ($(this).hasClass('selected')) {
-                $(this).removeClass('selected');
-            }
-            else {
-                fabricSelectionTable.$('tr.selected').removeClass('selected');
-                $(this).addClass('selected');
-            }
-        });
-
         $('#HSPtable tbody').on('click', 'tr', function () {
 
             if ((HSPtable.data().any())) {
@@ -624,20 +606,27 @@
                 }
                 else {
                     HSPtable.$('tr.selected').removeClass('selected');
+                    Reset();
                     $(this).addClass('selected');
                     var rowdata = HSPtable.row(this).data();
-                    if (rowdata.ApprovedStatus != 0) {
-                        $('#saveBtn').prop("disabled", false);
-                        $('#updateBtn').prop("disabled", true);
-                        $('#reviseBtn').prop("disabled", true);
-                    }
-                    else {
+                    if (rowdata.ApprovedStatus == 0) {
                         Setvalue(rowdata);
                         $('#saveBtn').prop("disabled", true);
                         $('#updateBtn').prop("disabled", false);
                         $('#reviseBtn').prop("disabled", false);
                     }
                 }
+            }
+        });
+
+        $('#fabricSelectionTable tbody').on('click', 'tr', function () {
+            event.preventDefault();
+            if ($(this).hasClass('selected')) {
+                $(this).removeClass('selected');
+            }
+            else {
+                fabricSelectionTable.$('tr.selected').removeClass('selected');
+                $(this).addClass('selected');
             }
         });
 
@@ -663,8 +652,8 @@
                     fb: fb,
                     cm: cm,
                     OrderNo: $("#OrderNoSL").val().length > 0 ? $("#OrderNoSL").val().toString() : '',
-                    RefNo: $("#RefNoSL").val().length > 0 ? $("#ColorSL").val().toString() : '', \
-                    Note : "HSP",
+                    RefNo: $("#RefNoSL").val().length > 0 ? $("#ColorSL").val().toString() : '',
+                    Note: "HSP"
                 };
 
                 $.ajax({
