lst1234aaa1qwewqddqwfilecomplete12

--- a/TextileResearchDevelopment/Views/Dyeing/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Dyeing/Index.cshtml
@@ -283,11 +283,12 @@
                 <th>FabricID</th>
                 <th>RFTNoID</th>
                 <th>HistoryID</th>
+                <th>BarCode</th>
+                <th>Buyer</th>
                 <th>Fabric</th>
                 <th>Composition</th>
                 <th>OrderNo</th>
                 <th>RefNo</th>
-                <th>BarCode</th>
                 <th>McNo</th>
                 <th>Speed</th>
                 <th>Enzyme</th>
@@ -316,11 +317,12 @@
                 <th></th>
                 <th></th>
                 <th></th>
+                <th>BarCode</th>
+                <th>Buyer</th>
                 <th>Fabric</th>
                 <th>Composition</th>
                 <th>OrderNo</th>
                 <th>RefNo</th>
-                <th>BarCode</th>
                 <th>McNo</th>
                 <th>Speed</th>
                 <th>Enzyme</th>
@@ -570,12 +572,12 @@
                 { "data": "fabric.Id" },
                 { "data": "rft.Id" },
                 { "data": "hs.Id" },
+                { "data": "fabric.BarCode" },
                 { "data": "fabric.buyer.BuyerName" },
                 { "data": "fabric.fb.FabricTypeName" },
                 { "data": "fabric.cm.Composition" },
                 { "data": "fabric.OrderNo" },
                 { "data": "fabric.RefNo" },
-                { "data": "fabric.BarCode" },
                 { "data": "rft.RFT" },
                 { "data": "hs.History" },
                 { "data": "McNo" },
