--- a/TextileResearchDevelopment/Views/Peach/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Peach/Index.cshtml
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                     <div class="form-group col-xs-4 form-inline">
-                        <label for="Plaiter" class="control-label" style="width:35%;">Temp</label>
+                        <label for="Plaiter" class="control-label" style="width:35%;">Plaiter</label>
                         <div style="display: inline;">
                             <input type="text" class=" form-control" style="width:60%;" id="Plaiter" placeholder="Plaiter(m/min)" required autofocus>
                         </div>
@@ -199,13 +199,13 @@
                     <div class="form-group col-xs-4 form-inline">
                         <label for="RPM" class="control-label" style="width:35%;">RPM</label>
                         <div style="display: inline;">
-                            <input type="text" class=" form-control" style="width:60%;" id="Steam" placeholder="D.RPM" autofocus>
+                            <input type="text" class=" form-control" style="width:60%;" id="RPM" placeholder="D.RPM" autofocus>
                         </div>
                     </div>
                     <div class="form-group col-xs-4 form-inline">
                         <label for="Brush" class="control-label" style="width:35%;">Brush</label>
                         <div style="display: inline;">
-                            <input type="text" class=" form-control" style="width:60%;" id="Compaction" placeholder="D.Brush" required autofocus>
+                            <input type="text" class=" form-control" style="width:60%;" id="RPM" placeholder="D.Brush" required autofocus>
                         </div>
                     </div>
                 </div>
