--- a/TextileResearchDevelopment/Content/UrmiStyle.css
+++ b/TextileResearchDevelopment/Content/UrmiStyle.css
@@ -11,6 +11,11 @@ dt-button {
     color:white;
 }
 
+.disabled {
+    pointer-events: none;
+    opacity: 0.7;
+}
+
 .footer-w3l {
     position: fixed;
     height: 70px;
