--- a/TextileResearchDevelopment/Views/HSP/Index.cshtml
+++ b/TextileResearchDevelopment/Views/HSP/Index.cshtml
@@ -21,10 +21,11 @@
 
 <div id="MainDiv">
 
-    <ul id="MainContextMenu" class="dropdown-menu" role="menu" style="display:none">
-        <li><a tabindex="-1" href="#">Delete</a></li>
-        <li><a tabindex="-1" href="#">Approve</a></li>
-        <li><a tabindex="-1" href="#">Unapprove</a></li>
+
+    <ul id="MainContextMenu" class="dropdown-menu" role="menu" style="display: none">
+        <li id="CDelete"><a tabindex="-1" href="#">Delete</a></li>
+        <li id="CApprove"><a tabindex="-1" href="#">Approve</a></li>
+        <li id="CUnApprove"><a tabindex="-1" href="#">Unapprove</a></li>
     </ul>
 
     <input type="checkbox" id="hidden" value="option1" style="display:none;">
@@ -260,12 +261,12 @@
                 <th>Id</th>
                 <th>FabricID</th>
                 <th>McNoID</th>
+                <th>BarCode</th>
                 <th>Buyer</th>
                 <th>Fabric</th>
                 <th>Composition</th>
                 <th>OrderNo</th>
                 <th>RefNo</th>
-                <th>BarCode</th>
                 <th>McNo</th>
                 <th>Temp</th>
                 <th>Speed</th>
@@ -292,12 +293,12 @@
                 <th></th>
                 <th></th>
                 <th></th>
+                <th>BarCode</th>
                 <th>Buyer</th>
                 <th>Fabric</th>
                 <th>Composition</th>
                 <th>OrderNo</th>
                 <th>RefNo</th>
-                <th>BarCode</th>
                 <th>McNo</th>
                 <th>Temp</th>
                 <th>Speed</th>
@@ -393,7 +394,48 @@
             };
         })(jQuery, window);
 
-        loadMcList();
+        SetRoles();
+
+        function SetRoles() {
+            debugger;
+
+            var user = {
+                Name: "HSP"
+            }
+
+            $.ajax({
+                type: "POST",
+                url: "/UserManagement/GetRoles",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                data: JSON.stringify(user),
+                success: function (response) {
+                    debugger;
+                    if (response != "" && response != null) {
+
+                        if (response.RolePermissionID == 0) {
+                            if (response.Crud == 0) {
+                                $('#saveBtn').hide();
+                                $('#updateBtn').hide();
+                                $('#CDelete a').addClass('disabled');
+                            }
+                            if (response.Approval == 0) {
+                                $('#CApprove a').addClass('disabled');
+                                $('#CUnApprove a').addClass('disabled');
+                            }
+                        }
+                    }
+                    else {
+                        alert("Connection Error!!!");
+                        return;
+                    }
+                    loadMcList();
+                },
+                failure: function () {
+                    $("#tblItems").append(" Error when fetching data please contact administrator");
+                }
+            });
+        }
 
         function loadMcList() {
             debugger;
@@ -521,12 +563,12 @@
                 { "data": "Id" },
                 { "data": "fabric.Id" },
                 { "data": "mc.Id" },
+                { "data": "fabric.BarCode" },
                 { "data": "fabric.buyer.BuyerName" },
                 { "data": "fabric.fb.FabricTypeName" },
                 { "data": "fabric.cm.Composition" },
                 { "data": "fabric.OrderNo" },
                 { "data": "fabric.RefNo" },
-                { "data": "fabric.BarCode" },
                 { "data": "mc.McNo" },
                 { "data": "Temp" },
                 { "data": "Speed" },
