--- a/TextileResearchDevelopment/Views/Singeing/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Singeing/Index.cshtml
@@ -239,12 +239,12 @@
                 <th></th>
                 <th>Id</th>
                 <th>FabricID</th>
+                <th>BarCode</th>
                 <th>Buyer</th>
                 <th>Fabric</th>
                 <th>Composition</th>
                 <th>OrderNo</th>
                 <th>RefNo</th>
-                <th>BarCode</th>
                 <th>F.H. Burner1</th>
                 <th>F.H. Burner2</th>
                 <th>F.W. Burner1</th>
@@ -267,12 +267,12 @@
                 <th style="visibility:hidden;"></th>
                 <th></th>
                 <th></th>
+                <th>BarCode</th>
                 <th>Buyer</th>
                 <th>Fabric</th>
                 <th>Composition</th>
                 <th>OrderNo</th>
                 <th>RefNo</th>
-                <th>BarCode</th>
                 <th>F.H. Burner1</th>
                 <th>F.H. Burner2</th>
                 <th>F.W. Burner1</th>
@@ -474,12 +474,12 @@
                 },
                 { "data": "Id" },
                 { "data": "fabric.Id" },
+                { "data": "fabric.BarCode" },
                 { "data": "fabric.buyer.BuyerName" },
                 { "data": "fabric.fb.FabricTypeName" },
                 { "data": "fabric.cm.Composition" },
                 { "data": "fabric.OrderNo" },
                 { "data": "fabric.RefNo" },
-                { "data": "fabric.BarCode" },
                 { "data": "HBurner1" },
                 { "data": "HBurner2" },
                 { "data": "WBurner1" },
@@ -1055,9 +1055,9 @@
             $("#RefNo").val("");
 
             $("#HBurner1").val("");
-            ("#HBurner2").val("");
-            ("#WBurner1").val("");
-            ("#WBurner2").val("");
+            $("#HBurner2").val("");
+            $("#WBurner1").val("");
+            $("#WBurner2").val("");
             $("#Speed").val("");
             $("#Burner").val("");
             $("#Position").val("");
