--- a/TextileResearchDevelopment/Views/Fabric/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Fabric/Index.cshtml
@@ -644,19 +644,22 @@
                     debugger;
                     if (response != "" && response != null) {
 
-                        //if (response.RolePermissionID == 0) {
-                        //    $('#CReset a').addClass('disabled');
-                        //    if (response.Crud == 0) {
-                        //        $('#saveBtn').hide();
-                        //        $('#updateBtn').hide();
-                        //        $('#reviseBtn').hide();
-                        //    }
-                        //    if (response.LibrarySet == 0) {
-                        //        $('#mdBuyer').addClass('disabled');
-                        //        $('#mdFabricType').addClass('disabled');
-                        //        $('#mdComposition').addClass('disabled');
-                        //    }
-                        //}
+                        if (response.RolePermissionID == 0) {
+
+                            $('#CDelete a').addClass('disabled');
+                            $('#CReset a').addClass('disabled');
+                            
+                            if (response.Crud == 0) {
+                                $('#saveBtn').hide();
+                                $('#updateBtn').hide();
+                                $('#reviseBtn').hide();
+                            }
+                            if (response.LibrarySet == 0) {
+                                $('#mdBuyer').addClass('disabled');
+                                $('#mdFabricType').addClass('disabled');
+                                $('#mdComposition').addClass('disabled');
+                            }
+                        }
                     }
                     else {
                         alert("Connection Error!!!");
@@ -669,8 +672,6 @@
                 }
             });
         }
-
-
 
         $("#mdBuyer").click(function () {
             debugger;
